syntax = "proto3";

package message;

enum FriendApplyStatus {
  FRIEND_APPLY_WAIT = 0;
  FRIEND_APPLY_AGREE = 1;
  FRIEND_APPLY_REFUSE = 2;
}

enum MessageType {
  MESSAGE_UNKNOWN = 0;
  MESSAGE_TEXT = 1;
  MESSAGE_IMAGE = 2;
  MESSAGE_AUDIO = 3;
  MESSAGE_VIDEO = 4;
  MESSAGE_FILE = 5;
}

enum MessageStatus {
  MESSAGE_WITHDRAW = 0;
  MESSAGE_WAIT = 1;
  MESSAGE_DONE = 2;
}

enum GroupMemberRole {
  GROUP_MEMBER = 0;
  GROUP_MANAGER = 1;
  GROUP_MASTER = 2;
}

enum GroupMemberSpeech {
  SPEECH_NORMAL = 0;
  SPEECH_BAN = 1;
}

message User {
  uint64 id = 1;
  uint64 uid = 2;
  string username = 3;
  string password = 4;
  string email = 5;
  string create_time = 6;
}

message UserInfo {
  uint64 uid = 1;
  string name = 2;
  int32 age = 3;
  string sex = 4;
  string head_image_url = 5;
}

message Friend {
  uint64 uid_a = 1;
  uint64 uid_b = 2;
  string create_time = 3;
  uint64 session_id = 4;
}

message FriendApply {
  uint64 from_uid = 1;
  uint64 to_uid = 2;
  FriendApplyStatus status = 3;
  string content = 4;
  string create_time = 5;
}

message Message {
  int64 message_id = 1;
  int64 from_uid = 2;
  int64 to_uid = 3;
  string session_key = 4;
  MessageType type = 5;
  string content = 6;
  MessageStatus status = 7;
  string send_date_time = 8;
  string read_date_time = 9;
}

message GroupManager {
  int64 gid = 1;
  int64 session_key = 2;
  string name = 3;
  string create_time = 4;
}

message GroupMember {
  int64 gid = 1;
  int64 uid = 2;
  GroupMemberRole role = 3;
  string join_time = 4;
  GroupMemberSpeech speech = 5;
  string member_name = 6;
}

message FriendList { repeated Friend friends = 1; }

message FriendApplyList { repeated FriendApply applies = 1; }

message MessageList { repeated Message messages = 1; }

message GroupMemberList { repeated GroupMember members = 1; }